--- a/app/index.html
+++ b/app/index.html
@@ -560,6 +560,60 @@
 			</div>
 		</div>
 	</section>
+	<section class="advantages">
+		<div class="container">
+			<div class="advantages__title title">
+				Why You Choose Foxtar Market Place?
+			</div>
+			<div class="advantages__inner">
+				<div class="advantages__item">
+					<div class="advantages__item-images icosvg-1">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="70" 		height="70" viewBox="0 0 32 32">
+							<title>locked</title>
+							<g fill='#000'>
+							<path d="M29 32h-26c-0.552 0-1-0.447-1-1v-16c0-0.553 0.448-1 1-1h3v-4c0-5.523 4.477-10 10-10s10 4.477 10 10v4h3c0.553 0 1 0.447 1 1v16c0 0.553-0.447 1-1 1zM22 9.5c0-3.038-2.687-5.5-6-5.5s-6 2.462-6 5.5v4.5h12v-4.5z"></path>
+						</svg>
+					</div>
+					<div class="advantages__item-title">
+						Easily Buy & Sell
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+					</div>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-images icosvg-2">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 32 32">
+							<title>gift</title>
+							<g fill='#000'>
+							<path d="M24.11 10c0.566-0.402 1.11-0.851 1.608-1.348 1.044-1.044 1.742-2.328 1.966-3.616 0.246-1.412-0.115-2.723-0.988-3.597-0.697-0.697-1.641-1.065-2.73-1.065-1.551 0-3.185 0.744-4.483 2.043-2.077 2.077-3.288 4.945-3.94 6.991-0.482-2.056-1.444-4.833-3.313-6.702-1.003-1.003-2.285-1.518-3.495-1.518-0.989 0-1.931 0.344-2.633 1.046-1.562 1.562-1.351 4.306 0.471 6.128 0.65 0.65 1.409 1.189 2.21 1.638h-6.782v8h2v14h24v-14h2v-8h-5.89zM21.073 4.007c0.866-0.866 1.948-1.384 2.892-1.384 0.334 0 0.803 0.070 1.139 0.406 0.813 0.813 0.357 2.697-0.977 4.031-1.373 1.373-3.221 2.318-4.826 2.939h-1.584c0.58-1.798 1.627-4.264 3.356-5.993zM7.31 5.028c-0.022-0.285-0.002-0.82 0.381-1.203 0.32-0.32 0.743-0.387 1.042-0.387v0c0.664 0 1.358 0.313 1.904 0.859 1.059 1.058 1.93 2.743 2.521 4.871 0.016 0.057 0.031 0.115 0.047 0.171-0.057-0.015-0.114-0.031-0.171-0.047-2.128-0.591-3.813-1.462-4.871-2.521-0.495-0.495-0.805-1.13-0.853-1.743zM14 30h-8v-13h8v13zM14 16h-10v-4h10v4zM26 30h-8v-13h8v13zM28 16h-10v-4h10v4z"></path>
+							</svg>
+					</div>
+					<div class="advantages__item-title">
+						Quality Products
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+					</div>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-images icosvg-3">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 32 32">
+							<title>heart</title>
+							<g fill='#000'>
+							<path d="M29.193 5.265c-3.629-3.596-9.432-3.671-13.191-0.288-3.76-3.383-9.561-3.308-13.192 0.288-3.741 3.704-3.741 9.709 0 13.415 1.069 1.059 11.053 10.941 11.053 10.941 1.183 1.172 3.096 1.172 4.278 0 0 0 10.932-10.822 11.053-10.941 3.742-3.706 3.742-9.711-0.001-13.415zM27.768 17.268l-11.053 10.941c-0.393 0.391-1.034 0.391-1.425 0l-11.053-10.941c-2.95-2.92-2.95-7.671 0-10.591 2.844-2.815 7.416-2.914 10.409-0.222l1.356 1.22 1.355-1.22c2.994-2.692 7.566-2.594 10.41 0.222 2.95 2.919 2.95 7.67 0.001 10.591zM9.253 7.501c0.277 0 0.5 0.224 0.5 0.5s-0.224 0.5-0.5 0.5h-0.001c-1.794 0-3.249 1.455-3.249 3.249v0.001c0 0.276-0.224 0.5-0.5 0.5s-0.5-0.224-0.5-0.5v0c0-2.346 1.901-4.247 4.246-4.249 0.002 0 0.002-0.001 0.004-0.001z"></path>
+							</svg>
+					</div>
+					<div class="advantages__item-title">
+						100% Secure Payment
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<!-- <script src="js/main.min.js"></script> -->
