--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Moderno</title>
+	<title>Moderno: index</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+	<div class="wrapper">
+		<div class="content">
 	<header class="header">
 		<div class="header__top">
 			<div class="container">
@@ -649,6 +651,7 @@
 			</div>
 		</div>
 	</section>
+</div>
 	<footer class="footer">
 		<div class="footer__content">
 			<div class="container">
@@ -724,6 +727,7 @@
 			</div>
 		</div>
 	</footer>
+</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<!-- <script src="js/main.min.js"></script> -->
