--- a/app/contacts.html
+++ b/app/contacts.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Moderno: page</title>
+	<title>Moderno: contacts</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -180,8 +182,86 @@
 					</div>
 				</div>
 			</header>
-			
-			
+			<section class="search page-search" style="background-image: url(/images/search-bg.jpg);">
+				<div class="container">
+					<div class="search__inner">						
+						<div class="search__inner-text">
+							Premium WordPress Themes, Web Templates and Many More ...
+						</div>
+						<div class="search__inner-form">
+							<form >
+								<input type="text" placeholder="Search Your Keywords . . ." required>
+								<button type="submit">
+									<img src="images/icons/search.png" alt="">
+								</button>
+							</form>
+						</div>
+					</div>
+				</div>				
+			</section>
+			<div class="breadcrumbs">
+				<div class="container">
+					<div class="breadcrumbs__inner">
+						<ul class="breadcrumbs__list">
+							<li><a href="#">Home</a></li>																	
+							<li><span>Contact Us</span></li>						
+						</ul>
+					</div>
+				</div>
+			</div>
+			<section class="contact">
+				<div class="container">
+					<div class="contact__wrapper">
+						<div class="contact__head">
+							Contact With Us
+						</div>
+						<div class="contact__inner">
+							<div class="contact__map">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63600.33369457034!2d-74.00215596073137!3d40.77928069673543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1583501245426!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen="">
+								</iframe>
+							</div>
+							<div class="contact__box">
+								<div class="contact__info">
+									<div class="contact__info-item">
+										<div class="contact__info-title icon-location">
+											<span>Our Office Address</span>
+										</div>
+										<div class="contact__info-content">
+											PO Box 16122 Collins Street West 
+											Victoria 8007 Australia
+										</div>
+									</div>
+									<div class="contact__info-item">
+										<div class="contact__info-title icon-phone">
+											<span>Phone</span>
+										</div>
+										<a href="tel:61383766284" class="contact__info-content">+61 3 8376 6284</a>			
+									</div>
+									<div class="contact__info-item">
+										<div class="contact__info-title icon-envelope-o">
+											<span>E-mail</span>
+										</div>
+										<div class="contact__info-content">
+											info@foxtar.com
+										</div>
+									</div>
+								</div>									
+								<div class="contact__form">
+									<div class="contact__form-title">Drop Us A Message</div>
+									<form>
+										<div class="contact__form-row">
+											<input type="text" placeholder="Name*">
+											<input type="text" placeholder="E-mail*">
+										</div>
+										<textarea placeholder="Message*"></textarea>
+										<button type="submit">Send Message</button>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			
 			
 			
