--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,7 @@
 								</ul>
 							</div>
 						</div>				
-						<a class="header__btn header__btn-login " href="#">Login</a>
+						<a class="header__btn header__btn-login btn btn-primary" data-fancybox data-src="#modal" href="javascript:;">Login</a>					
 						<a class="header__btn header__btn-logout switched-off" href="#">Logout</a>	
 						<a class="header__btn header__btn-register" href="#">Register</a>	
 					</div>					
@@ -846,6 +846,23 @@
 				</div>
 			</div>
 		</footer>
+		<div id="modal">
+			<div class="login__title">
+				Login
+			</div>
+			<form>
+				<label class="login__label-name">				
+					<input type="text" placeholder="Name" required>
+				</label>
+				<label class="login__label-pass">
+					<input type="text" placeholder="Password" required>
+				</label>
+				<button type="submit">Submit</button>
+				<a class="create-account" href="#">Creat An Account?</a>
+				<a class="lost-pass" href="#">Lost Password?</a>
+
+			</form>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
