--- a/app/profile.html
+++ b/app/profile.html
@@ -277,11 +277,11 @@
 				<div class="container">					
 					<div class="product-one__tabs settings__tabs">
 						<div class="tabs">				
-							<span class="tab tab-active icon-user data-id="1" >About Me</span>
-							<span class="tab icon-briefcase" data-id="2">Products ( 10 )</span>
-							<span class="tab icon-envelope-o" data-id="3">Message Box</span>
-							<span class="tab icon-comments-o" data-id="4">Customer Reviews ( 20 )</span>
-							<span class="tab icon-group" data-id="5">Followers (100 )</span>
+							<span class="icon-user tab tab-active" data-id="1">About Me</span>
+							<span class="icon-briefcase tab" data-id="2">Products ( 10 )</span>
+							<span class="icon-envelope-o tab" data-id="3">Message Box</span>
+							<span class="icon-comments-o tab" data-id="4">Customer Reviews ( 20 )</span>
+							<span class="icon-group tab" data-id="5">Followers (100 )</span>
 						</div>
 						<div class="tab-content">
 							<div class="tab-item active-tab" id="1">
