--- a/app/new-items.html
+++ b/app/new-items.html
@@ -77,6 +77,13 @@
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
+							<li><a href="#">Home</a></li>						
 							<li><span>Product Page</span></li>
 						</ul>
 					</div>
